# WebPy_HW5

./: README.md  main.py  mistakes  pyproject.toml  settings.py
storage/: data.json
